add title to HTML

--- a/js.html
+++ b/js.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Social Media Application</title>
 	<script type="text/javascript" src="js.js"></script>
 </head>
 <body>
